style.css
/* ... */
    /*-------------------------------------------------------------
    # Contact Page
    --------------------------------------------------------------*/
#content_full {
    width:100%;
    display:block;
    float:left;
}
#content_full #top_quote {
    background:#F8F8F8;
    width:95%;
    margin:0 auto 1em auto;
    display:table;
}
#content_full #top_quote p {
    padding:1em;
    font-size:1.1em;
    font-style:italic;
    line-height:1.1em;
    color:#04435d;
}
#content_full #top_quote .quote {
    float:left;
    margin:0.6em;
    font-size:2.5em;
    color:#096cc8;
}
#content_full #map_contact {
    float:left;
    width:100%;
    display:block;
}
#content_full #map_contact #left {
    width:60%;
    float:left;
}
#content_full #map_contact #right {
    width:39%;
    float:right;
}
#content_full #map_contact #right h1 {
    font-size:1.5em;
    font-weight:100;
    padding:0 0 0 0.625em;
}
#content_full #map_contact #right .title {
    border-bottom:1px solid #ccc;
    padding:0 0 0.325em 0;
    color:#333;
    font-size:1em;
    margin:0 0 0 1em;
}
#content_full #map_contact #right .datum {
    font-size:1em;
    margin:0.3em 0 1.4em 1em;
}
#content_full #map_contact #right .phone::before {
    content:"\f095";
    font-family:"FontAwesome";
    font-size:1.1em;
    padding:0 0.8em 0 .5em;
}
#content_full #map_contact #right .address::before {
    content:"\f041";
    font-family:"FontAwesome";
    font-size:1.1em;
    padding:0 0.8em 0 .5em;
}
#content_full #map_contact #right .contact::before {
    content:"\f003";
    font-family:"FontAwesome";
    font-size:1.1em;
    padding:0 0.8em 0 .5em;
}
#content_full #map_contact #right .twitter::before {
    content:"\f099";
    font-family:"FontAwesome";
    font-size:1.1em;
    padding:0 0.8em 0 .5em;
}
#content_full #how_much {
    float:left;
    width:100%;
    background:#3385c3;
    padding:2em 0;
    margin:1em 0 0 0;
}
#content_full #how_much #left {
    float:left;
    width:auto;
    font-size:1em;
    color:white;
    margin:0 0 0 0.625em;
}
#content_full #how_much #right {
    float:right;
    width:auto;
    margin:0 0.625em 0 0;
}
#content_full #how_much #right a {
    color:white;
    text-decoration:none;
    font-size:1em;
    text-align:center;
    border:1px solid white;
    padding:0.625em 1em;
}
#content_full #contactforrm {
    float:left;
    width:100%;
    margin:1em 0;
}
#content_full #contactform .gform_wrapper .ginput_complex input[type=text], #content_full #contactform .gform_wrapper.gf_browser_chrome ul.gform_fields li.gfield select, #content_full #contactform .gform_wrapper textarea.medium {
    background:#ccc;
    border:1px solid #333;
    font-size:1em;
}
#content_full #contactform .gform_wrapper .gform_footer input[type=submit] {
    background:#096cc8;
    color:white;
    text-align:center;
    padding:0.5em 1em;
    border:none;
}
/*--------------------------------------------------------------
# Mobile Menu
---------------------------------------------------------------*/
.mobilemenubars {
    background:black;
    height:9px;
    width:100%;
    margin:0.125em;
    width:44px;
    float:right;
}
#menu_close {display:none;}
#menu_btn {
    background:#c9a659;
    width:48px;
    height:40px;
    float:right;
    display:none;
    margin:0.375em 0 0 0;
}

/*--------------------------------------------------------------
# Alignments
--------------------------------------------------------------*/
.alignleft {
    display:inline;
    float:left;
    margin-right:1.5em;
}
.alignright {
    display:inline;
    float:right;
    margin-left:1.5em;
}
.aligncenter {
    clear:both;
    display:block;
    margin-left:auto;
    margin-right:auto;
}

/*--------------------------------------------------------------
# Responsive Video Wrappers
---------------------------------------------------------------*/
.videoWrapper {
    position:relative;
    padding-bottom:56.25%; /* 16:9 */
    padding-top:1.500em;
    height:0;
}
.videoWrapper iframe {
    position:absolute;
    top:0;
    left:0;
    width:100%;
    height:100%;
}

/*--------------------------------------------------------------
# Footer
--------------------------------------------------------------*/
footer {
    float:left;
    width:100%;
    background:#f8f8f8;
    padding:1.4em 0 0 0;
}
footer #right {
    width:auto;
    float:right;
    margin:0 1em 0 0;
}
footer #right ul li {
    display:inline;
    padding:0 0.5em 0 0;
}
footer #right ul li a {
    font-size:0.8em;
}
footer #left {
    width:auto;
    float:left;
    margin:0 0 0 1em;
}
footer #left ul li {
    display:inline;
    padding:0 0.5em 0 0;
}
footer #bottom {
    float:left;
    width:100%;
}
footer #bottom p:first-child {
    font-size:0.8em;
    font-style:italic;
    text-align:center;
}
footer #bottom p:last-child {
    font-size:0.9em;
    text-align:center;
}

/*---------------------------------------------------------------
# Responsive (iphone/android)
---------------------------------------------------------------*/
@media only screen and (max-width:500px) {
    .container {
        float:left;
        display: block;
        width:100%;
        margin:0;
        padding:0;
    }
    img {
        width:100%;
        height:auto;
    }
}

